data/derived/comb/progs/unify/prog8381.ml.out
Characters 107-115:
  let f a x = match (a, x) with ((w, b), (y, z)) ->  b @ w mod 10 :: (w / 10) in
                                                                     ^^^^^^^^
Error: This expression has type int but an expression was expected of type
         int list
